--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.22.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts-upgradeable": "^5.0.2"
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
+    "dotenv": "^16.4.5"
   }
 }
