update contract address

--- a/esg-chain-bridge/package.json
+++ b/esg-chain-bridge/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "web3": "^3.0.0-rc.5",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "xrpl": "^3.0.0"
   }
 }
