--- a/esg-chain-website/package.json
+++ b/esg-chain-website/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "web3": "^4.7.0",
     "xrpl": "^3.0.0"
   },
   "devDependencies": {
